<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="25dp"
        app:cardCornerRadius="25dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/boarder_line"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:fontFamily="@font/heading"
                android:layout_marginStart="10dp"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:fontFamily="@font/heading"
                android:textSize="25sp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etFirstNme"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etLastNme"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPhone"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etEmail"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPass1"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPass2"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/btnCreateAc"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:fontFamily="@font/heading"
                android:background="@drawable/black_button"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:layout_margin="18dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:fontFamily="@font/cabin"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnToLogIn"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:fontFamily="@font/cabin"
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</ScrollView>