<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:elevation="25dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/boarder_line"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:fontFamily="@font/heading"
                android:layout_marginStart="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="25sp"
                android:fontFamily="@font/heading"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etUserEmail"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etUserPass"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/btnLogIn"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:background="@drawable/black_button"
                android:textColor="@color/white"
                android:fontFamily="@font/heading"
                android:padding="12dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:layout_margin="18dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:fontFamily="@font/cabin"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnToRegAc"
                android:padding="5dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:fontFamily="@font/cabin"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>








        </LinearLayout>





    </androidx.cardview.widget.CardView>




</ScrollView>