<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:paddingEnd="10dp">


                    <TextView
                        android:id="@+id/txtUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/heading"
                        android:text="@string/hello_jane"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_back"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:fontFamily="@font/heading"/>



                </LinearLayout>


                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="33dp"
                    android:id="@+id/btnMenu"
                    android:src="@drawable/logout"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="end"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Explore Availabe rooms"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="3dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="218dp"
                android:background="@drawable/back_line2"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:id="@+id/recView"
                    android:clipToPadding="false"
                    android:layout_marginStart="3dp"
                    android:padding="1dp"/>



            </LinearLayout>


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">




                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:background="@drawable/current_button"
                                android:id="@+id/btnCurrentBook"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="23dp"
                                    android:layout_gravity="end">


                                    <ImageView
                                        android:layout_width="70dp"
                                        android:layout_height="70dp"
                                        android:src="@drawable/bookings"
                                        android:layout_marginStart="50dp"/>


                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/current_booking"
                                        android:fontFamily="@font/heading"
                                        android:textStyle="bold"
                                        android:textColor="@color/black"
                                        android:layout_marginEnd="20dp"
                                        android:layout_marginTop="4dp"
                                        android:textSize="18sp"/>

                                </LinearLayout>




                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:id="@+id/btnMaintain"
                                android:background="@drawable/current_button"
                                android:layout_marginTop="5dp"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="23dp"
                                    android:layout_gravity="end">


                                    <ImageView
                                        android:layout_width="69dp"
                                        android:layout_height="68dp"
                                        android:src="@drawable/car"
                                        android:layout_marginStart="28dp"/>


                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/maintainance"
                                        android:fontFamily="@font/heading"
                                        android:textStyle="bold"
                                        android:textColor="@color/black"
                                        android:textAlignment="center"
                                        android:layout_marginEnd="20dp"
                                        android:layout_marginTop="4dp"
                                        android:textSize="18sp"/>


                                </LinearLayout>




                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:id="@+id/btnHistory"
                                android:background="@drawable/current_button"
                                android:layout_marginTop="7dp"
                                android:orientation="vertical">




                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="25dp"
                                    android:layout_marginEnd="15dp"
                                    android:layout_gravity="end">


                                    <ImageView
                                        android:layout_width="70dp"
                                        android:layout_height="70dp"
                                        android:src="@drawable/history"
                                        android:layout_marginStart="3dp"/>


                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/tickets"
                                        android:fontFamily="@font/heading"
                                        android:textStyle="bold"
                                        android:textColor="@color/black"
                                        android:layout_gravity="end|bottom"
                                        android:layout_marginEnd="20dp"
                                        android:layout_marginBottom="10dp"
                                        android:textSize="18sp"/>


                                </LinearLayout>

                            </LinearLayout>


                        </LinearLayout>


                    </LinearLayout>


                </ScrollView>

            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



